--- a/wiki/fr/TechDraw_CosmeticEraser.html
+++ b/wiki/fr/TechDraw_CosmeticEraser.html
@@ -58,8 +58,8 @@
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
 <ol><li>S&eacute;lectionnez un ou plusieurs objets cosm&eacute;tiques sur une feuille.</li>
 <li>Il y a plusieurs fa&ccedil;ons de lancer l'outil&nbsp;:
-<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticEraser.svg&amp;filetimestamp=20201127100101&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Supprimer l'objet cosm&eacute;tique</a></span>.</li>
-<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticEraser.svg&amp;filetimestamp=20201127100101&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Supprimer l'objet cosm&eacute;tique</b> du menu.</li></ul></li></ol>
+<ul><li>Appuyez sur le bouton <span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticEraser.svg&amp;filetimestamp=20201127100101&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a class="mw-selflink selflink">Supprimer un objet cosm&eacute;tique</a></span>.</li>
+<li>S&eacute;lectionnez l'option <b>TechDraw &rarr; <span typeof="mw:File"><a href="../index.php?title=TechDraw_CosmeticEraser.svg&amp;filetimestamp=20201127100101&amp;.html" class="mw-file-description"><img src="../File/TechDraw_CosmeticEraser.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Supprimer un objet cosm&eacute;tique</b> du menu.</li></ul></li></ol>
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Remarques">Remarques</span></h2>
@@ -111,15 +111,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118094934
+Cached time: 20260118094959
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.119 seconds
+CPU time usage: 0.083 seconds
+Real time usage: 0.154 seconds
 Preprocessor visited node count: 347/1000000
-Post&#8208;expand include size: 24537/2097152 bytes
-Template argument size: 9531/2097152 bytes
+Post&#8208;expand include size: 24539/2097152 bytes
+Template argument size: 9533/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -127,19 +127,19 @@ Unstrip post&#8208;expand size: 1501/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   31.938      1 -total
- 26.32%    8.407      1 Template:TechDraw_Tools_navi/fr
- 19.30%    6.163      1 Template:GuiCommand/fr
- 15.85%    5.062      2 Template:Navigation_menu_2
- 12.95%    4.137      1 Template:Userdocnavi/fr
-  9.78%    3.124      2 Template:Docnav/fr
-  9.67%    3.089      1 Template:KEY
-  7.82%    2.499      1 Template:Button
-  7.25%    2.316      1 Template:Version/fr
-  4.46%    1.425      1 Template:MenuCommand
+100.00%   30.526      1 -total
+ 26.04%    7.949      1 Template:TechDraw_Tools_navi/fr
+ 18.51%    5.650      1 Template:Version/fr
+ 16.80%    5.128      2 Template:Navigation_menu_2
+ 14.39%    4.393      1 Template:Userdocnavi/fr
+ 11.59%    3.539      1 Template:GuiCommand/fr
+  8.94%    2.730      2 Template:Docnav/fr
+  7.10%    2.168      1 Template:Button
+  6.57%    2.006      1 Template:KEY
+  4.36%    1.332      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260118094934 and revision id 1740085. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:156760-0!canonical and timestamp 20260118094959 and revision id 1740089. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
