--- a/wiki/fr/TechDraw_ExtensionVertexAtIntersection.html
+++ b/wiki/fr/TechDraw_ExtensionVertexAtIntersection.html
@@ -1,8 +1,8 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionVertexAtIntersection/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionVertexAtIntersection&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ExtensionVertexAtIntersection.html" class="mw-pt-progress mw-pt-progress--med" title="TechDraw Erg&auml;nzungKnotenAnSchnittstelle (67% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ExtensionVertexAtIntersection.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungKnotenAnSchnittstelle (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionVertexAtIntersection.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionVertexAtIntersection (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
-<li><a href="../pl/TechDraw_ExtensionVertexAtIntersection.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Rozszerzenie Dodaj wierzcho&#322;ek kosmetyczny na przeci&#281;ciu (89% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><a href="../pl/TechDraw_ExtensionVertexAtIntersection.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj wierzcho&#322;ek kosmetyczny na przeci&#281;ciu (100% translated)" lang="pl" dir="ltr">polski</a></li></ul></div>
 <div class="docnav">
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/Arrow-left.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionThreadBoltBottom.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_ExtensionThreadBoltBottom.html" title="TechDraw ExtensionThreadBoltBottom/fr">Filetage</a></div>
     <div><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_CommandAddOffsetVertex.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span> <a href="../fr/TechDraw_CommandAddOffsetVertex.html" title="TechDraw CommandAddOffsetVertex/fr">Ajouter un sommet d&eacute;cal&eacute;</a>
@@ -10,18 +10,17 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
-<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Intersection de lignes
+<p><span class="mw-default-size" typeof="mw:File"><span><img src="../File/TechDraw_ExtensionVertexAtIntersection.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span><span> </span>TechDraw Intersection cosm&eacute;tiques de lignes
 </p>
 </td></tr>
 <tr>
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; Intersection de lignes
+<td class="ctEven">TechDraw &rarr; Lignes centrales/filetages &rarr; Intersections cosm&eacute;tiques de lignes
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -50,7 +49,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
 <p>L'outil <b>TechDraw Intersection de lignes</b> ajoute un ou plusieurs sommets cosm&eacute;tiques &agrave; l'intersection ou aux intersections des ar&ecirc;tes s&eacute;lectionn&eacute;es.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionVertexAtIntersectionExample.png&amp;filetimestamp=20210930124345&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionVertexAtIntersectionExample.png" decoding="async" width="200" height="156" class="mw-file-element" data-file-width="325" data-file-height="254"></a></span>
@@ -115,34 +113,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111134623
+Cached time: 20260118100609
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.100 seconds
-Real time usage: 0.173 seconds
-Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 25635/2097152 bytes
-Template argument size: 10028/2097152 bytes
+CPU time usage: 0.080 seconds
+Real time usage: 0.101 seconds
+Preprocessor visited node count: 347/1000000
+Post&#8208;expand include size: 25675/2097152 bytes
+Template argument size: 10068/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1185/5000000 bytes
+Unstrip post&#8208;expand size: 1197/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   64.479      1 -total
- 44.12%   28.448      1 Template:TechDraw_Tools_navi/fr
- 22.78%   14.691      2 Template:Navigation_menu_2
- 18.32%   11.813      1 Template:Userdocnavi/fr
-  8.76%    5.647      1 Template:MenuCommand
-  8.56%    5.520      1 Template:Button
-  7.00%    4.512      1 Template:GuiCommand/fr
-  6.21%    4.004      2 Template:Docnav/fr
-  5.58%    3.596      1 Template:Caption
+100.00%   23.416      1 -total
+ 31.86%    7.461      1 Template:TechDraw_Tools_navi/fr
+ 24.11%    5.645      2 Template:Navigation_menu_2
+ 18.18%    4.256      1 Template:Userdocnavi/fr
+ 12.36%    2.894      1 Template:GuiCommand/fr
+ 11.96%    2.800      2 Template:Docnav/fr
+  9.13%    2.138      1 Template:Caption
+  7.61%    1.783      1 Template:MenuCommand
+  6.25%    1.463      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277668-0!canonical and timestamp 20260111134623 and revision id 1733981. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277668-0!canonical and timestamp 20260118100609 and revision id 1740122. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
