--- a/wiki/fr/TechDraw_ExtensionVertexAtIntersection.html
+++ b/wiki/fr/TechDraw_ExtensionVertexAtIntersection.html
@@ -50,7 +50,7 @@
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Intersection de lignes</b> ajoute un ou plusieurs sommets cosm&eacute;tiques &agrave; l'intersection ou aux intersections des ar&ecirc;tes s&eacute;lectionn&eacute;es.
+<p>L'outil <b>TechDraw Intersection cosm&eacute;tiques de lignes</b> ajoute un ou plusieurs sommets cosm&eacute;tiques &agrave; l'intersection ou aux intersections des ar&ecirc;tes s&eacute;lectionn&eacute;es.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionVertexAtIntersectionExample.png&amp;filetimestamp=20210930124345&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionVertexAtIntersectionExample.png" decoding="async" width="200" height="156" class="mw-file-element" data-file-width="325" data-file-height="254"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
@@ -113,12 +113,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118100609
+Cached time: 20260118100627
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.080 seconds
-Real time usage: 0.101 seconds
+CPU time usage: 0.070 seconds
+Real time usage: 0.109 seconds
 Preprocessor visited node count: 347/1000000
 Post&#8208;expand include size: 25675/2097152 bytes
 Template argument size: 10068/2097152 bytes
@@ -129,18 +129,18 @@ Unstrip post&#8208;expand size: 1197/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.416      1 -total
- 31.86%    7.461      1 Template:TechDraw_Tools_navi/fr
- 24.11%    5.645      2 Template:Navigation_menu_2
- 18.18%    4.256      1 Template:Userdocnavi/fr
- 12.36%    2.894      1 Template:GuiCommand/fr
- 11.96%    2.800      2 Template:Docnav/fr
-  9.13%    2.138      1 Template:Caption
-  7.61%    1.783      1 Template:MenuCommand
-  6.25%    1.463      1 Template:Button
+100.00%   32.029      1 -total
+ 32.74%   10.486      1 Template:TechDraw_Tools_navi/fr
+ 18.38%    5.886      2 Template:Navigation_menu_2
+ 17.97%    5.756      2 Template:Docnav/fr
+ 13.27%    4.249      1 Template:GuiCommand/fr
+ 12.88%    4.124      1 Template:Userdocnavi/fr
+  7.92%    2.536      1 Template:Caption
+  6.58%    2.109      1 Template:MenuCommand
+  6.37%    2.040      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277668-0!canonical and timestamp 20260118100609 and revision id 1740122. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:277668-0!canonical and timestamp 20260118100626 and revision id 1740124. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
