--- a/wiki/fr/TechDraw_Workbench.html
+++ b/wiki/fr/TechDraw_Workbench.html
@@ -193,9 +193,7 @@
 <ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCustomizeFormat.svg&amp;filetimestamp=20240707202747&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCustomizeFormat.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionCustomizeFormat.html" title="TechDraw ExtensionCustomizeFormat/fr">Personnaliser la bulle</a>&nbsp;: personnalise le formatage du texte d'une bulle ou du texte d'une cote. Des <a rel="nofollow" class="external text" href="https://en.wikipedia.org/wiki/Geometric_dimensioning_and_tolerancing">symboles GD&amp;T (en)</a> et d'autres caract&egrave;res sp&eacute;ciaux peuvent &ecirc;tre ajout&eacute;s.</li></ul>
 <p><span id="Centerlines/Threading"></span>
 </p>
-<div class="mw-translate-fuzzy">
-<h4><span id="Lignes_centrales.2C_filetage_et_taraudage"></span><span class="mw-headline" id="Lignes_centrales,_filetage_et_taraudage">Lignes centrales, filetage et taraudage</span></h4>
-</div>
+<h3><span id="Taraudages.2Ffiletages.2Fcosm.C3.A9tiques"></span><span class="mw-headline" id="Taraudages/filetages/cosm&eacute;tiques">Taraudages/filetages/cosm&eacute;tiques</span></h3>
 <div class="mw-translate-fuzzy">
 <dl><dd><ul><li><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCircleCenterLines.svg&amp;filetimestamp=20241126213022&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCircleCenterLines.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/TechDraw_ExtensionCircleCenterLines.html" title="TechDraw ExtensionCircleCenterLines/fr">Axes de centrage</a>&nbsp;: ajoute des lignes de centre aux cercles et aux arcs.</li></ul></dd></dl>
 </div>
@@ -418,13 +416,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118095203
+Cached time: 20260118101011
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
 CPU time usage: 0.304 seconds
-Real time usage: 0.378 seconds
-Preprocessor visited node count: 952/1000000
+Real time usage: 0.394 seconds
+Preprocessor visited node count: 951/1000000
 Post&#8208;expand include size: 25593/2097152 bytes
 Template argument size: 9064/2097152 bytes
 Highest expansion depth: 5/100
@@ -434,18 +432,18 @@ Unstrip post&#8208;expand size: 4474/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   23.127      1 -total
- 28.98%    6.702      1 Template:TechDraw_Tools_navi/fr
- 19.46%    4.501      2 Template:Navigation_menu_2
- 13.61%    3.147      1 Template:Userdocnavi/fr
- 12.21%    2.824      2 Template:Docnav/fr
- 10.93%    2.527     25 Template:Version/fr
- 10.81%    2.499      5 Template:VersionPlus/fr
-  7.85%    1.816      1 Template:TOCright
-  5.98%    1.383      1 Template:KEY
+100.00%   30.173      1 -total
+ 40.12%   12.105      1 Template:TechDraw_Tools_navi/fr
+ 26.32%    7.941      2 Template:Navigation_menu_2
+ 13.50%    4.073      5 Template:VersionPlus/fr
+ 10.34%    3.121     25 Template:Version/fr
+ 10.27%    3.100      1 Template:Userdocnavi/fr
+  8.00%    2.414      2 Template:Docnav/fr
+  4.84%    1.459      1 Template:KEY
+  3.40%    1.026      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83074-0!canonical and timestamp 20260118095203 and revision id 1740103. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:83074-0!canonical and timestamp 20260118101011 and revision id 1740136. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
