--- a/wiki/fr/TechDraw_ExtensionCircleCenterLines.html
+++ b/wiki/fr/TechDraw_ExtensionCircleCenterLines.html
@@ -1,9 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw ExtensionCircleCenterLines/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+ExtensionCircleCenterLines&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Erg&auml;nzungKreismittellinien (78% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--complete" title="TechDraw Erg&auml;nzungKreismittellinien (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw ExtensionCircleCenterLines (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linee centrali Cerchio (78% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--high" title="Rysunek Techniczny: Rozszerzenie Dodaj o&#347; otworu (78% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="../pl/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--complete" title="Rysunek Techniczny: Rozszerzenie Dodaj o&#347; otworu (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--med" title='TechDraw "&#1044;&#1086;&#1073;&#1072;&#1074;&#1080;&#1090;&#1100; &#1086;&#1089;&#1077;&#1074;&#1099;&#1077; &#1083;&#1080;&#1085;&#1080;&#1080; &#1082; &#1086;&#1082;&#1088;&#1091;&#1078;&#1085;&#1086;&#1089;&#1090;&#1080;" (33% translated)' lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/TechDraw_ExtensionCircleCenterLines.html" class="mw-pt-progress mw-pt-progress--med" title="&#44592;&#49696;&#46020;&#47732; &#50896;&#51032; &#51473;&#49900;&#49440; (56% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
 <div class="docnav">
@@ -13,7 +13,6 @@
     <div><a href="../fr/TechDraw_Workbench.html" title="TechDraw Workbench/fr">Atelier TechDraw</a>
  <span class="mw-default-size" typeof="mw:File"><span><img src="../File/Workbench_TechDraw.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></span></span></div>
 </div>
-<div class="mw-translate-fuzzy">
 <table class="fcinfobox wikitable ct" width="100%" style="float: right; width: 230px; margin-left: 1em">
 <tbody><tr>
 <td class="ctTitle" style="font-weight: bold; font-size: 125%;">
@@ -24,7 +23,7 @@
 <th class="ctOdd">Emplacement du menu
 </th></tr>
 <tr>
-<td class="ctEven">TechDraw &rarr; Extensions&nbsp;: taraudages/filetages &rarr; Axes de centrage
+<td class="ctEven">TechDraw &rarr; Taraudages/filetages/cosm&eacute;tiques &rarr; Axes de centrage
 </td></tr>
 <tr>
 <th class="ctOdd">Ateliers
@@ -53,7 +52,6 @@
 <tr>
 <td class="ctToc"><br><meta property="mw:PageProp/toc">
 </td></tr></tbody></table>
-</div>
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
@@ -119,34 +117,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111112201
+Cached time: 20260118101211
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.083 seconds
-Real time usage: 0.125 seconds
-Preprocessor visited node count: 349/1000000
+CPU time usage: 0.060 seconds
+Real time usage: 0.089 seconds
+Preprocessor visited node count: 348/1000000
 Post&#8208;expand include size: 25762/2097152 bytes
 Template argument size: 10161/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1776/5000000 bytes
+Unstrip post&#8208;expand size: 1786/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   25.825      1 -total
- 27.14%    7.008      1 Template:TechDraw_Tools_navi/fr
- 19.59%    5.058      2 Template:Navigation_menu_2
- 18.26%    4.717      1 Template:Caption
- 17.41%    4.495      1 Template:Userdocnavi/fr
- 14.35%    3.705      1 Template:GuiCommand/fr
- 10.89%    2.811      2 Template:Docnav/fr
-  4.70%    1.215      1 Template:Button
-  4.24%    1.096      1 Template:MenuCommand
+100.00%   19.520      1 -total
+ 33.96%    6.629      1 Template:TechDraw_Tools_navi/fr
+ 24.81%    4.843      2 Template:Navigation_menu_2
+ 17.13%    3.343      1 Template:Userdocnavi/fr
+ 12.39%    2.418      2 Template:Docnav/fr
+ 11.71%    2.286      1 Template:GuiCommand/fr
+  9.98%    1.949      1 Template:MenuCommand
+  6.63%    1.294      1 Template:Caption
+  5.62%    1.097      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267340-0!canonical and timestamp 20260111112201 and revision id 1733266. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267340-0!canonical and timestamp 20260118101211 and revision id 1740138. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
