--- a/wiki/fr/TechDraw_ExtensionCircleCenterLines.html
+++ b/wiki/fr/TechDraw_ExtensionCircleCenterLines.html
@@ -55,7 +55,7 @@
 <p><span id="Description"></span>
 </p>
 <h2><span class="mw-headline" id="Description">Description</span></h2>
-<p>L'outil <b>TechDraw Axes de centrage</b> ajoute des lignes de centre aux cercles et aux arcs.
+<p>L'outil <b>TechDraw Axes de centrage</b> ajoute des axes de centrage aux cercles et aux arcs.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCircleCenterLinesExample.png&amp;filetimestamp=20210827121211&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCircleCenterLinesExample.png" decoding="async" width="200" height="98" class="mw-file-element" data-file-width="311" data-file-height="152"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, un cercle avec ses axes de centrage</p>
@@ -117,12 +117,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118101211
+Cached time: 20260118101240
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.060 seconds
-Real time usage: 0.089 seconds
+CPU time usage: 0.098 seconds
+Real time usage: 0.163 seconds
 Preprocessor visited node count: 348/1000000
 Post&#8208;expand include size: 25762/2097152 bytes
 Template argument size: 10161/2097152 bytes
@@ -133,18 +133,18 @@ Unstrip post&#8208;expand size: 1786/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.520      1 -total
- 33.96%    6.629      1 Template:TechDraw_Tools_navi/fr
- 24.81%    4.843      2 Template:Navigation_menu_2
- 17.13%    3.343      1 Template:Userdocnavi/fr
- 12.39%    2.418      2 Template:Docnav/fr
- 11.71%    2.286      1 Template:GuiCommand/fr
-  9.98%    1.949      1 Template:MenuCommand
-  6.63%    1.294      1 Template:Caption
-  5.62%    1.097      1 Template:Button
+100.00%   40.170      1 -total
+ 38.59%   15.500      1 Template:TechDraw_Tools_navi/fr
+ 26.83%   10.778      2 Template:Navigation_menu_2
+ 14.74%    5.923      1 Template:Userdocnavi/fr
+ 11.81%    4.745      1 Template:GuiCommand/fr
+ 10.30%    4.136      1 Template:Button
+  9.06%    3.639      1 Template:Caption
+  8.21%    3.297      2 Template:Docnav/fr
+  4.50%    1.808      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267340-0!canonical and timestamp 20260118101211 and revision id 1740138. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267340-0!canonical and timestamp 20260118101239 and revision id 1740140. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
