--- a/wiki/fr/TechDraw_ExtensionCircleCenterLines.html
+++ b/wiki/fr/TechDraw_ExtensionCircleCenterLines.html
@@ -58,7 +58,7 @@
 <p>L'outil <b>TechDraw Axes de centrage</b> ajoute des axes de centrage aux cercles et aux arcs.
 </p><p><span typeof="mw:File"><a href="../index.php?title=TechDraw_ExtensionCircleCenterLinesExample.png&amp;filetimestamp=20210827121211&amp;.html" class="mw-file-description"><img src="../File/TechDraw_ExtensionCircleCenterLinesExample.png" decoding="async" width="200" height="98" class="mw-file-element" data-file-width="311" data-file-height="152"></a></span>
 </p>
-<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">A droite, un cercle avec ses axes de centrage</p>
+<p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&Agrave; droite, un cercle avec ses axes de centrage</p>
 <p><span id="Usage"></span>
 </p>
 <h2><span class="mw-headline" id="Utilisation">Utilisation</span></h2>
@@ -117,15 +117,15 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118101240
+Cached time: 20260118101314
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.098 seconds
-Real time usage: 0.163 seconds
+CPU time usage: 0.071 seconds
+Real time usage: 0.108 seconds
 Preprocessor visited node count: 348/1000000
-Post&#8208;expand include size: 25762/2097152 bytes
-Template argument size: 10161/2097152 bytes
+Post&#8208;expand include size: 25764/2097152 bytes
+Template argument size: 10162/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
@@ -133,18 +133,18 @@ Unstrip post&#8208;expand size: 1786/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.170      1 -total
- 38.59%   15.500      1 Template:TechDraw_Tools_navi/fr
- 26.83%   10.778      2 Template:Navigation_menu_2
- 14.74%    5.923      1 Template:Userdocnavi/fr
- 11.81%    4.745      1 Template:GuiCommand/fr
- 10.30%    4.136      1 Template:Button
-  9.06%    3.639      1 Template:Caption
-  8.21%    3.297      2 Template:Docnav/fr
-  4.50%    1.808      1 Template:MenuCommand
+100.00%   20.656      1 -total
+ 28.93%    5.976      1 Template:TechDraw_Tools_navi/fr
+ 21.17%    4.374      2 Template:Navigation_menu_2
+ 18.67%    3.857      1 Template:GuiCommand/fr
+ 17.55%    3.625      1 Template:Userdocnavi/fr
+  9.62%    1.987      2 Template:Docnav/fr
+  8.05%    1.663      1 Template:Caption
+  7.51%    1.551      1 Template:Button
+  7.10%    1.466      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267340-0!canonical and timestamp 20260118101239 and revision id 1740140. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:267340-0!canonical and timestamp 20260118101313 and revision id 1740142. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
