--- a/wiki/cs/Sketcher_Workbench.html
+++ b/wiki/cs/Sketcher_Workbench.html
@@ -39,13 +39,8 @@
 <p>Pomoc&iacute; <span typeof="mw:File"><a href="../index.php?title=Workbench_Sketcher.svg&amp;filetimestamp=20231231194727&amp;.html" class="mw-file-description"><img src="../File/Workbench_Sketcher.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Sketcher_Workbench.html" title="Sketcher Workbench">Pracovn&iacute; plochy Sketcher</a> Lze vytv&aacute;&#345;et 2D n&aacute;&#269;rtky ur&#269;en&eacute; pro pou&#382;it&iacute; v jin&yacute;ch pracovn&iacute;ch ploch&aacute;ch. 2D n&aacute;&#269;rtky jsou v&yacute;choz&iacute;m bodem pro mnoho CAD model&#367;. Obvykle definuj&iacute; profily a cesty pro operace k vytvo&#345;en&iacute; 3D tvar&#367;. Kone&#269;n&yacute; tvar modelu m&#367;&#382;e z&aacute;viset na n&#283;kolika n&aacute;&#269;rtc&iacute;ch.
 </p><p>Spolu s booleovsk&yacute;mi operacemi definovan&yacute;mi v <span typeof="mw:File"><a href="../index.php?title=Workbench_Part.svg&amp;filetimestamp=20240712190040&amp;.html" class="mw-file-description"><img src="../File/Workbench_Part.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../Part_Workbench.html" title="Part Workbench">pracovn&iacute; plo&scaron;e Part</a>, tvo&#345;&iacute; Sketcher Workbench, zkr&aacute;cen&#283; "Sketcher", z&aacute;klad metody <a href="../Constructive_solid_geometry.html" title="Constructive solid geometry">konstruktivn&iacute; geometrie t&#283;les</a> (CSG) pro vytv&aacute;&#345;en&iacute; t&#283;les. Spolu s operacemi <span typeof="mw:File"><a href="../index.php?title=Workbench_PartDesign.svg&amp;filetimestamp=20240405092932&amp;.html" class="mw-file-description"><img src="../File/Workbench_PartDesign.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../PartDesign_Workbench.html" title="PartDesign Workbench">pracovn&iacute; plochy PartDesign</a>, tvo&#345;&iacute; tak&eacute; z&aacute;klad metodiky  <a href="../Feature_editing.html" title="Feature editing">editace prvk&#367;</a> pro vytv&aacute;&#345;en&iacute; t&#283;les. Ale n&aacute;&#269;rtky pou&#382;&iacute;v&aacute; i mnoho jin&yacute;ch pracovn&iacute;ch ploch.
 </p><p>Pracovn&iacute; plocha Sketcher obsahuje <a href="#Constraints">vazby</a>, co&#382; umo&#382;&#328;uje 2D tvar&#367;m dodr&#382;ovat p&#345;esn&eacute; geometrick&eacute; definice z hlediska d&eacute;lky, &uacute;hl&#367; a vztah&#367; (horizont&aacute;lnost, vertik&aacute;lnost, kolmost atd.). &#344;e&scaron;itel vazeb vypo&#269;&iacute;t&aacute; rozsah vazeb 2D geometrie a umo&#382;&#328;uje interaktivn&iacute; prozkoum&aacute;n&iacute; stup&#328;&#367; volnosti n&aacute;&#269;rtu.
-</p>
-<div class="mw-translate-fuzzy">
-<h3><span id="Pro_co_nen.C3.AD_Skic.C3.A1.C5.99_vhodn.C3.BD"></span><span class="mw-headline" id="Pro_co_nen&iacute;_Skic&aacute;&#345;_vhodn&yacute;">Pro co nen&iacute; Skic&aacute;&#345; vhodn&yacute;</span></h3>
-<p>Skic&aacute;&#345; nen&iacute; ur&#269;en pro vytv&aacute;&#345;en&iacute; 2D v&yacute;kres&#367;. Proto&#382;e n&aacute;&#269;rty jsou pou&#382;&iacute;v&aacute;ny pro generov&aacute;n&iacute; t&#283;les, jsou automaticky skr&yacute;v&aacute;ny. Rozm&#283;ry jsou viditeln&eacute; pouze v edita&#269;n&iacute;m m&oacute;du N&aacute;&#269;rtu.
-</p>
-</div>
-<p><span typeof="mw:File"><a href="../index.php?title=FC_ConstrainedSketch.png&amp;filetimestamp=20180803221416&amp;.html" class="mw-file-description"><img src="../File/FC_ConstrainedSketch.png" decoding="async" width="450" height="387" class="mw-file-element" data-file-width="523" data-file-height="450"></a></span>
+</p><p>Sketcher nen&iacute; ur&#269;en k vytv&aacute;&#345;en&iacute; 2D v&yacute;kres&#367;. Jakmile jsou n&aacute;&#269;rtky pou&#382;ity k vytvo&#345;en&iacute; pevn&eacute;ho prvku, jsou automaticky skryty a vazby jsou viditeln&eacute; pouze v re&#382;imu &uacute;pravy n&aacute;&#269;rtu. Pokud pot&#345;ebujete pouze vytvo&#345;it 2D pohledy pro tisk a nechcete vytv&aacute;&#345;et 3D modely, pod&iacute;vejte se na <a href="../Draft_Workbench.html" title="Draft Workbench">Pracovn&iacute; plochu Draft</a>.
+</p><p><span typeof="mw:File"><a href="../index.php?title=FC_ConstrainedSketch.png&amp;filetimestamp=20180803221416&amp;.html" class="mw-file-description"><img src="../File/FC_ConstrainedSketch.png" decoding="async" width="450" height="387" class="mw-file-element" data-file-width="523" data-file-height="450"></a></span>
 </p>
 <div class="mw-translate-fuzzy">
 <p><i>Z&aacute;kladn&iacute; pln&#283; vazben&yacute; n&aacute;&#269;rt&lrm;.</i>
@@ -852,13 +847,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260118103002
+Cached time: 20260118103157
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.532 seconds
-Real time usage: 0.709 seconds
-Preprocessor visited node count: 1566/1000000
+CPU time usage: 0.457 seconds
+Real time usage: 0.678 seconds
+Preprocessor visited node count: 1563/1000000
 Post&#8208;expand include size: 34317/2097152 bytes
 Template argument size: 9744/2097152 bytes
 Highest expansion depth: 7/100
@@ -868,19 +863,19 @@ Unstrip post&#8208;expand size: 4772/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   46.591      1 -total
- 22.85%   10.647      1 Template:Sketcher_Tools_navi/cs
- 14.27%    6.647      1 Template:Userdocnavi/cs
- 13.25%    6.172      2 Template:Docnav
- 12.45%    5.801      2 Template:Navigation_menu_2
-  8.21%    3.826      1 Template:PropertyView
-  7.16%    3.337      5 Template:MenuCommand
-  5.92%    2.760     35 Template:Version
-  5.70%    2.654      1 Template:TOCright
-  4.88%    2.274      5 Template:Caption
+100.00%   68.667      1 -total
+ 23.37%   16.047      1 Template:Sketcher_Tools_navi/cs
+ 15.51%   10.653      2 Template:Navigation_menu_2
+ 14.54%    9.985      1 Template:Userdocnavi/cs
+ 10.06%    6.905     35 Template:Version
+ 10.00%    6.870      1 Template:PropertyView
+  7.02%    4.822      8 Template:VersionPlus
+  5.84%    4.007      2 Template:Docnav
+  5.20%    3.572     14 Template:KEY
+  4.87%    3.341      5 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103002 and revision id 1740183. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:26938-0!canonical and timestamp 20260118103157 and revision id 1740185. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
